--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-    image: vladk1m0/alpine-owa:latest
+    image: vladk1m0/docker-owa:latest
     depends_on:
       - db
     networks:
